# Uringy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cicd.yaml  continuous_integration.yaml  deploy_to_crates_io.yaml  manual_deployment.yaml  uringy-macros.yaml  uringy.yaml
benchmark/: Cargo.toml  README.md
benchmark/benches/: block_on.rs  event_loop_iai.rs  notify.rs  notify_criterion.rs  notify_iai.rs
benchmark/examples/: glommio_executor_benchmark.rs  tokio_executor_benchmark.rs  tokio_localset_executor_benchmark.rs  uringy_executor_benchmark.rs
benchmark/src/: notify.rs
ecosystem/nats/: Cargo.toml
ecosystem/nats/proto/: Cargo.toml
ecosystem/nats/proto/src/: client_operation.rs  cursor.rs  error.rs  lib.rs  server_operation.rs  utils.rs
ecosystem/nats/src/: lib.rs  manager.rs  reader.rs  subscription.rs  writer.rs
examples/: hello_world.rs
examples/limit_concurrency/: Cargo.toml
examples/limit_concurrency/src/: main.rs
io_uring/: Cargo.toml
io_uring/src/: lib.rs  opcode.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: circular_buffer.rs  event_loop.rs  fs.rs  lib.rs  process.rs  time.rs  utils.rs
src/ecosystem/: mod.rs
src/ecosystem/http/: client.rs  into_body.rs  mime.rs  mod.rs  payload.rs  request.rs  response.rs
src/ecosystem/http/server/: fake_client.rs  from_request.rs  into_response.rs  macros.rs  mod.rs  route.rs  routing.rs
src/ecosystem/nats/: mod.rs  proto.rs
src/fs/: mod.rs
src/net/: mod.rs  quic.rs  tcp.rs  udp.rs  unix.rs
src/process/: mod.rs  signal.rs
src/runtime/: context_switch.rs  event_loop.rs  mod.rs  stack.rs  syscall.rs  task.rs  tls.rs  uring.rs
src/runtime/assembly/: x86_64.s
src/runtime/io_uring/: cqueue.rs  mod.rs  opcode.rs  register.rs  squeue.rs  submit.rs  types.rs  util.rs
src/runtime/io_uring/sys/: mod.rs  sys.rs
src/sync/: channel.rs  mod.rs  notify.rs  oneshot_channel.rs  oneshot_notify.rs
src/time/: mod.rs
tests/: fail_compile.rs
tests/http/: return_body_then_code.rs  return_body_then_code.stderr  return_body_then_part.rs  return_body_then_part.stderr  return_part_then_code.rs  return_part_then_code.stderr  return_two_status_codes.rs  return_two_status_codes.stderr  take_request_then_part.rs  take_request_then_part.stderr  take_two_requests.rs  take_two_requests.stderr
