[package]
name = "uringy"
version = "0.4.0"
documentation = "https://docs.rs/uringy"
repository = "https://github.com/Dennis-Krasnov/Uringy"
homepage = "https://github.com/Dennis-Krasnov/Uringy"
description = "A simple single-threaded async runtime for Rust based on io_uring."
categories = ["asynchronous", "concurrency", "filesystem", "os", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures", "io_uring"]
license = "MIT"
authors = ["Dennis Krasnov <dennis@krasnov.dev>"]
edition = "2021"
rust-version = "1.58.1"

[workspace]
members = [
    "benchmark",
]

[features]
default = ["fs", "net", "time"]
fs = []
net = []
quic = ["net"] # TODO: pulls in quiche dependency
process = []
time = []

[dependencies]
# TODO: loosen dependencies
noop-waker = "=0.1.0"
slab = "0.4.6"
libc = { version = "0.2.126", default-features = false } # don't link to the standard library
bitflags = "1"

[dev-dependencies]
async-channel = "=1.6.1"
impls = "1.0.3"
