[package]
name = "uringy"
version = "0.5.0"
documentation = "https://docs.rs/uringy"
repository = "https://github.com/Dennis-Krasnov/Uringy"
homepage = "https://github.com/Dennis-Krasnov/Uringy"
description = "A simple single-threaded concurrency runtime for Rust based on io_uring."
categories = ["asynchronous", "concurrency", "filesystem", "os", "network-programming"]
keywords = ["io", "async", "non-blocking", "linux", "io_uring"]
license = "MIT"
authors = ["Dennis Krasnov <dennis@krasnov.dev>"]
edition = "2021"
rust-version = "1.70.0" # found with cargo msrv

[workspace]
members = [
    "macros",
]

[features]
default = ["macros"]
macros = ["dep:uringy-macros"]


[dependencies]
uringy-macros = { version = "0.1.0", optional = true }

cache-padded = "1.3.0"
io-uring = "0.6.0"
libc = "0.2.147"
slab = "0.4.8"
