[package]
name = "uringy"
version = "0.5.0"
documentation = "https://docs.rs/uringy"
repository = "https://github.com/Dennis-Krasnov/Uringy"
homepage = "https://uringy-documentation.fly.dev"
description = "A simple single-threaded concurrency runtime for Rust based on io_uring."
categories = ["asynchronous", "concurrency", "filesystem", "os", "network-programming"]
keywords = ["io", "async", "non-blocking", "linux", "io_uring"]
license = "0BSD"
authors = ["Dennis Krasnov <dennis@krasnov.dev>"]
edition = "2021"
rust-version = "1.73.0" # found with cargo msrv

[workspace]
members = [
    "macros",
]

[features]
# core
default = ["macros"]
macros = ["dep:uringy-macros"]

# optional
http = ["dep:http", "dep:mime", "dep:matchit", "dep:serde", "dep:serde_json", "dep:serde_urlencoded", "dep:httpdate", "dep:httparse"]
nats = ["dep:nom", "dep:itoa"]

# experimental
huge_pages = [] # requires OS setup
fast_thread_local = [] # requires nightly toolchain

[dependencies]
uringy-macros = { version = "0.2.0", optional = true }

thiserror = "1.0.50"
io-uring = "0.6.0"
libc = "0.2.147"
slab = "0.4.8"

# HTTP
http = { version = "0.2.9", optional = true }
mime = { version = "0.3.17", optional = true }
matchit = { version = "0.7.3", optional = true }
serde = { version = "1.0.190", optional = true }
serde_json = { version = "1.0.108", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
httpdate = { version = "1.0.3", optional = true }
httparse = { version = "1.8.0", optional = true }

# NATS
nom = { version = "7.1.3", optional = true }
itoa = { version = "1.0.9", optional = true }

[dev-dependencies]
uuid = { version = "1.5.0", features = ["v4"] }
serde = { version = "1.0.190", features = ["derive"] }
trybuild = "1.0.85"
