[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# https://bit.ly/3kyGsmw
[lib]
bench = false

[[bench]]
name = "notify_criterion"
harness = false

[[bench]]
name = "notify_iai"
harness = false

[features]
enable_criterion = []
enable_iai = []

[dependencies]
uringy = { path = ".." }
tokio = { version = "1.13.0", features = ["sync"] }
noop-waker = "0.1.0"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports", "async_futures"] }
iai = "0.1"
