[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# https://bit.ly/3kyGsmw
[lib]
bench = false

[[bench]]
name = "notify_criterion"
harness = false

[[bench]]
name = "event_loop_iai"
harness = false

[dev-dependencies]
# Runtimes
uringy = { path = ".." }
tokio = { version = "1.13.0", features = ["sync"] }

# Benchmarking tools
criterion = { version = "0.3.5", features = ["html_reports", "async_futures"] }
iai = "0.1"

# Misc
rand = "0.8.4"
